--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-beautifulsoup4>=4.9.0,<4.10
-Django>=3.0.9,<3.1
-html5lib==1.0.1
-lxml==4.4.1
-pytz>=2020.1
-requests>=2.23.0,<2.24
-python-dateutil>=2.8.1,<2.9
+beautifulsoup4~=4.9.3
+Django~=3.1.5
+html5lib~=1.1
+lxml~=4.6.2
+pytz>=2020.5
+requests~=2.25.1
+python-dateutil~=2.8.1
